# pricing_backend

./: .env.example  .gitignore  Dockerfile  README.md  books.json  docker-compose.yml  pyproject.toml  run_tests.py
alembic/: env.py
alembic/versions/: 897846b42f3e_add_unique_constraint_to_books.py  a92646f5eec4_create_books_table.py
app/: config.py  conftest.py  database.py  events.py  exceptions.py  main.py
app/models/: book.py
app/repositories/: base.py  book.py
app/repositories/tests/: test_book_repository.py
app/routes/: books.py
app/schemas/: book.py
app/services/: base.py  book.py
app/services/tests/: test_book_service.py
app/tests/: factories.py
app/utils/: dump_data.py
