[tool.poetry]
name = "pricing-backend-assessment"
version = "0.1.0"
description = ""
authors = ["Sinisa Buncic"]
readme = "README.md"
packages = [{ include = "app" }]
# optional: adjust 'app' to your actual project folder

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.1,<0.117.0"
alembic = ">=1.16.4,<2.0.0"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
sqlalchemy = {version = ">=2.0.42,<3.0.0", extras = ["asyncio"]}
sqlmodel = ">=0.0.24,<0.0.25"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
uvicorn = ">=0.35.0,<0.36.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
faker = "^37.5.3"
requests = "^2.32.4"
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"